documentation: added docs for route api.analysis
